--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 # Site navigation links
 
-- title:
+- title: About
+  url:
+  excerpt:
+  image:
+  - title: Project
   url:
   excerpt:
   image:
