--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,15 @@
 # Site navigation links
 
+- title: Home
+  url: /
+  excerpt:
+  image:
+ 
+- title: Blog
+  url: /Blog/
+
+
 - title: About
-  url:
-  excerpt:
-  image:
-  - title: Project
-  url:
-  excerpt:
-  image:
+  url: /About
+  
+
