--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,14 @@
 # Site wide configuration
 
 title: "Yuqian(Iris) Zhanfu"
-description: "This is a description of my awesome site."
-logo: # 120x120 px default image used for Twitter summary card
+
+image:
+  feature: feature-image-filename.jpg
+description: "."
+logo: logo.jpg# 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
+# url: "https://yuqianz93320.github.io/yuqian93320.github.io"
 url: "https://yuqianz93320.github.io/yuqian93320.github.io"
 feed:
   path: atom.xml
