--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
 
 
