--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -7,7 +7,7 @@ locales:
   en: &DEFAULT_EN
     overview: "Overview"
     toc: "Table of Contents"
-    written_by: "Written by"
+    written_by: "Written by: Dear Iris"
     updated: "Updated"
     share: "Share on"
   en_US:
