--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,21 @@
 # ----------- CONFIGURABLE START -----------
-title:            "Scribble"
-description:      "Such theme, very cool."
-url:              http://scribble.muan.co # Site url, without a slash at the end.
-signoff:          "muan" # Your name
-facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
+title:            "Yuqian(Iris) Zhanfu‘s Data World"
+description:      "Something about Iris and her data work."
+url:              http://iriszhanfu.com # Site url, without a slash at the end.
+signoff:          "Yuqian(Iris) Zhanfu" # Your name
+facebook_appid:   isiris@live.cn# APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
 share:            false # Turn on twitter and facebook share buttons
 
-links:
+links: 
   - name:         Posts
     url:          /
     external:     false
   - name:         About me
     url:          /about
     external:     false
+  
+
 # ------------ CONFIGURABLE END ------------
 
 permalink:        /posts/:title
